--- a/config.gradle
+++ b/config.gradle
@@ -13,8 +13,6 @@ ext {
     ]
 
 
-
-
     testDeps = [
             junit   : "junit:junit:4.12",
             runner  : "com.android.support.test:runner:0.5",
@@ -42,10 +40,12 @@ ext {
     ]
 
     retrofitDeps = [
-            retrofit                : "com.squareup.retrofit2:retrofit:2.4.0",
-            retrofitConverterGson   : "com.squareup.retrofit2:converter-gson:2.4.0",
-            retrofitAdapterRxjava2  : "com.squareup.retrofit2:adapter-rxjava2:2.4.0",
-            okhttp3LoggerInterceptor: "com.squareup.okhttp3:logging-interceptor:3.11.0"
+            retrofit                : "com.squareup.retrofit2:retrofit:2.6.0",
+//            retrofitConverterGson   : "com.squareup.retrofit2:converter-gson:2.4.0",
+            retrofitConverterMoshi  : "com.squareup.retrofit2:converter-moshi:2.6.0",
+            retrofitAdapterRxjava2  : "com.squareup.retrofit2:adapter-rxjava2:2.6.0",
+            okhttp3LoggerInterceptor: "com.squareup.okhttp3:logging-interceptor:3.11.0",
+            retrofitKotlinMoshi     : "com.squareup.moshi:moshi-kotlin:1.8.0"
     ]
 
     arouterDeps = [
@@ -54,11 +54,13 @@ ext {
     ]
 
     commonDeps = [
-            multidex     : "com.android.support:multidex:1.0.3",
-            logger       : "com.orhanobut:logger:2.2.0",
-            glide        : "com.github.bumptech.glide:glide:4.8.0",
-            rxpermissions: "com.github.tbruyelle:rxpermissions:0.10.2",
-            eventbus     : "org.greenrobot:eventbus:3.1.1"
+            multidex         : "com.android.support:multidex:1.0.3",
+            logger           : "com.orhanobut:logger:2.2.0",
+            glide            : "com.github.bumptech.glide:glide:4.8.0",
+            rxpermissions    : "com.github.tbruyelle:rxpermissions:0.10.2",
+            eventbus         : "org.greenrobot:eventbus:3.1.1",
+            coroutinesCore   : 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M2',
+            coroutinesAndroid: 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M2'
     ]
 
     supportLibs = supportDeps.values()
